fix: responsivity on mobile devices

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,3 +38,12 @@ body {
 * {
   -webkit-tap-highlight-color: transparent;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
